namespace FoundryAgentLocal.Worker;

public sealed class FakeAgentRunner : IAgentRunner
{
    public Task RunAsync(string folderPath, CancellationToken cancellationToken = default)
    {
        var topicName = Path.GetFileName(folderPath);
        var content = $"[Fake research result for: {topicName}]\n\nThis is a placeholder generated by FakeAgentRunner.";
        return File.WriteAllTextAsync(Path.Combine(folderPath, "research.txt"), content, cancellationToken);
    }
}
